add getLine for every Expression and ensure while argument is boolean